--- a/.gitignore
+++ b/.gitignore
@@ -237,3 +237,4 @@ Temporary Items
 .apdisk
 
 # End of https://www.toptal.com/developers/gitignore/api/osx,java,eclipse,intellij,maven
+.idea/.name
